Fix calc bug. Clean up files.

--- a/inductance_calc.html
+++ b/inductance_calc.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta name="Keywords" content="Inductance, magnetics, coil, calculator">
   <meta name="Description" content="Javascript Inductance calculator">
-  <meta name="Version" content="18/03/2018 - SHA:6FC138">
+  <meta name="Version" content="18/03/2018 - SHA:210B19">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
   <title>Inductance Calculator</title>
 
@@ -167,6 +167,7 @@
        document.getElementById("AL_2").value = getCookie("AL_2");
        document.getElementById("N").value = getCookie("N");
        document.getElementById("f").value = getCookie("f");
+       calc();
     }
 
     // Read cookies
