--- a/rms_calculator.html
+++ b/rms_calculator.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta name="Keywords" content="RMS, average, median, value, calculator">
   <meta name="Description" content="JavaScript average and RMS value Calculator">
-  <meta name="Version" content="18/03/2018 - SHA:0FA83E">
+  <meta name="Version" content="18/03/2018 - SHA:BC614B">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
   <title>Average and RMS value Calculator</title>
 
@@ -168,6 +168,7 @@
        document.getElementById("V3_rms").value = getCookie("V3_rms");
        document.getElementById("V4_rms").value = getCookie("V4_rms");
        document.getElementById("V5_rms").value = getCookie("V5_rms");
+       calc();
     }
 
     // Read cookies
