--- a/rms_calculator.html
+++ b/rms_calculator.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta name="Keywords" content="RMS, average, median, value, calculator">
   <meta name="Description" content="JavaScript average and RMS value Calculator">
-  <meta name="Version" content="18/03/2018 - SHA:BC614B">
+  <meta name="Version" content="18/03/2018 - SHA:1005DA">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
   <title>Average and RMS value Calculator</title>
 
@@ -139,16 +139,16 @@
     // Include script: include/cookies.js
     
     // Init calculations
-    function init_cookies() {
-       if  (getCookie("saved") == 'true')
-          load_var_cookie();
+    function cookies_setup() {
+       if  (cookies_read("saved") == 'true')
+          cookies_var_load();
        else
-          reset_var();
+          var_reset();
        calc();
     }
 
     // Save variables to cookie
-    function save_var_cookie() {
+    function cookies_var_save() {
        var expiresdate = new Date(2068, 1, 02, 11, 20);
        expiresdate = "expires=" + expiresdate.toUTCString();
        var names = ["V_max", "V_min", "D", "V1_rms", "V2_rms", "V3_rms", "V4_rms", "V5_rms",  ];
@@ -159,30 +159,35 @@
     }
 
     // Load variables from cookie
-    function load_var_cookie() {
-       document.getElementById("V_max").value = getCookie("V_max");
-       document.getElementById("V_min").value = getCookie("V_min");
-       document.getElementById("D").value = getCookie("D");
-       document.getElementById("V1_rms").value = getCookie("V1_rms");
-       document.getElementById("V2_rms").value = getCookie("V2_rms");
-       document.getElementById("V3_rms").value = getCookie("V3_rms");
-       document.getElementById("V4_rms").value = getCookie("V4_rms");
-       document.getElementById("V5_rms").value = getCookie("V5_rms");
+    function cookies_var_load() {
+       document.getElementById("V_max").value = cookies_read("V_max");
+       document.getElementById("V_min").value = cookies_read("V_min");
+       document.getElementById("D").value = cookies_read("D");
+       document.getElementById("V1_rms").value = cookies_read("V1_rms");
+       document.getElementById("V2_rms").value = cookies_read("V2_rms");
+       document.getElementById("V3_rms").value = cookies_read("V3_rms");
+       document.getElementById("V4_rms").value = cookies_read("V4_rms");
+       document.getElementById("V5_rms").value = cookies_read("V5_rms");
        calc();
     }
 
     // Read cookies
-    function getCookie(name) {
-       var re = new RegExp(name + "=([^;]+)");
-       var value = re.exec(document.cookie);
-       return (value != null) ? unescape(value[1]) : null;
+    function cookies_read(name) {
+       var re = new RegExp(name + "=([^;&]+)");
+       var value = decodeURIComponent(re.exec(document.cookie));
+       if (isFinite(value)) {
+          return value;
+       } 
+       else {
+         return '';
+       }
     }
 
     // End include/cookies.js
 
     // Setup variables onload
     function setup() {
-      reset_var();
+      var_reset();
       calc();
     }
 
@@ -190,12 +195,12 @@
     function calc() {
 
        // Test variable changes
-       read_var();
-       if (test_var_change() == false)
+       var_read_id();
+       if (var_test_change() == false)
           return;
 
-       copy_var_values();
-       add_query();
+       var_copy_values();
+       query_write();
 
        // Calculation: Average value of sine wave (offset)
        V_offset1 = V_min + 0.5 * (V_max - V_min);
@@ -249,23 +254,6 @@
        print_calc();
     }
 
-    // Add query string to url
-    function add_query () {
-       var url = document.URL.split('?')[0];
-       var query = '';
-       query = query + "V_max=" + V_max + '&';
-       query = query + "V_min=" + V_min + '&';
-       query = query + "D=" + D + '&';
-       query = query + "V1_rms=" + V1_rms + '&';
-       query = query + "V2_rms=" + V2_rms + '&';
-       query = query + "V3_rms=" + V3_rms + '&';
-       query = query + "V4_rms=" + V4_rms + '&';
-       query = query + "V5_rms=" + V5_rms + '&';
-
-       history.pushState({id: 'homepage'}, 'Average and RMS value Calculator', url + '?' + query);
-    }
-
-
     // Print calcs
     function print_calc() {
        document.getElementById("V_offset1").value = num_fix(V_offset1, 5);
@@ -286,23 +274,8 @@
        document.getElementById("V_add_rms").value = num_fix(V_add_rms, 5);
     }
 
-    // Test if there are variable changes
-    var var_values = {};
-
-    function test_var_change() {
-       if (var_values["V_max"] != V_max) return true;
-       if (var_values["V_min"] != V_min) return true;
-       if (var_values["D"] != D) return true;
-       if (var_values["V1_rms"] != V1_rms) return true;
-       if (var_values["V2_rms"] != V2_rms) return true;
-       if (var_values["V3_rms"] != V3_rms) return true;
-       if (var_values["V4_rms"] != V4_rms) return true;
-       if (var_values["V5_rms"] != V5_rms) return true;
-       return false;
-    }
-
     // Read all variables
-    function read_var() {
+    function var_read_id() {
        V_max = idtonum("V_max"); // Variable: Maximum value of signal
        V_min = idtonum("V_min"); // Variable: Minimum value of signal
        D = idtonum("D") * 1e-02; // Variable: Duty cycle
@@ -313,20 +286,8 @@
        V5_rms = idtonum("V5_rms"); // Variable: V_rms of Wave 5
     }
 
-    // Copy values of variables
-    function copy_var_values() {
-       var_values["V_max"] = V_max;
-       var_values["V_min"] = V_min;
-       var_values["D"] = D;
-       var_values["V1_rms"] = V1_rms;
-       var_values["V2_rms"] = V2_rms;
-       var_values["V3_rms"] = V3_rms;
-       var_values["V4_rms"] = V4_rms;
-       var_values["V5_rms"] = V5_rms;
-    }
-
     // Reset variables to default values
-    function reset_var() {
+    function var_reset() {
        document.getElementById("V_max").value = 5;
        document.getElementById("V_min").value = 1;
        document.getElementById("D").value = 50;
@@ -340,7 +301,7 @@
     }
 
     // Clear variables
-    function clear_var() {
+    function var_clear() {
        document.getElementById("V_max").value = '';
        document.getElementById("V_min").value = '';
        document.getElementById("D").value = '';
@@ -351,6 +312,72 @@
        document.getElementById("V5_rms").value = '';
 
        calc();
+    }
+
+    // Test if there are variable changes
+    var var_values = {};
+
+    function var_test_change() {
+       if (var_values["V_max"] != V_max) return true;
+       if (var_values["V_min"] != V_min) return true;
+       if (var_values["D"] != D) return true;
+       if (var_values["V1_rms"] != V1_rms) return true;
+       if (var_values["V2_rms"] != V2_rms) return true;
+       if (var_values["V3_rms"] != V3_rms) return true;
+       if (var_values["V4_rms"] != V4_rms) return true;
+       if (var_values["V5_rms"] != V5_rms) return true;
+       return false;
+    }
+
+    // Copy values of variables
+    function var_copy_values() {
+       var_values["V_max"] = V_max;
+       var_values["V_min"] = V_min;
+       var_values["D"] = D;
+       var_values["V1_rms"] = V1_rms;
+       var_values["V2_rms"] = V2_rms;
+       var_values["V3_rms"] = V3_rms;
+       var_values["V4_rms"] = V4_rms;
+       var_values["V5_rms"] = V5_rms;
+    }
+ 
+    // Write query string into url
+    function query_write () {
+       var url = document.location.href.split('?')[0];
+       var query = '';
+       var value;
+       value = encodeURIComponent(document.getElementById("V_max").value)
+       if (value.length) query = query + "V_max=" + value + '&';
+       value = encodeURIComponent(document.getElementById("V_min").value)
+       if (value.length) query = query + "V_min=" + value + '&';
+       value = encodeURIComponent(document.getElementById("D").value)
+       if (value.length) query = query + "D=" + value + '&';
+       value = encodeURIComponent(document.getElementById("V1_rms").value)
+       if (value.length) query = query + "V1_rms=" + value + '&';
+       value = encodeURIComponent(document.getElementById("V2_rms").value)
+       if (value.length) query = query + "V2_rms=" + value + '&';
+       value = encodeURIComponent(document.getElementById("V3_rms").value)
+       if (value.length) query = query + "V3_rms=" + value + '&';
+       value = encodeURIComponent(document.getElementById("V4_rms").value)
+       if (value.length) query = query + "V4_rms=" + value + '&';
+       value = encodeURIComponent(document.getElementById("V5_rms").value)
+       if (value.length) query = query + "V5_rms=" + value + '&';
+
+       history.pushState({id: 'homepage'}, 'Average and RMS value Calculator', url + '?' + query);
+    }
+
+    // Read query string from URL to variables
+    function query_read() {
+       var url = document.location.href.split('?');
+       if (url.length < 2) return;
+       var values = url[1].split('&');
+       for(i=0; i<values.length; i++) {
+          var value = values[i].split('=');
+          alert(value);
+          if (value.length != 2) continue;
+          document.getElementById(value[0]).value = value[1];
+       }
+       calc()
     }
 
     // Evalue inputs with '.' or ',' as comma
@@ -404,7 +431,7 @@
 </head>
 
 
-<body onload="init_cookies()">
+<body onload="cookies_setup()">
 
   <!-- Content -->
 
@@ -819,10 +846,11 @@ RU5ErkJggg==
     <!--  Buttons Values -->
     <div class="row">
       Values
-      <input type="button" value="Reset" onclick="reset_var()">
-      <input type="button" value="Clear" onclick="clear_var()">
-      <input type="button" value="Save" onclick="save_var_cookie()">
-      <input type="button" value="Load" onclick="load_var_cookie()">
+      <input type="button" value="Reset" onclick="var_reset()">
+      <input type="button" value="Clear" onclick="var_clear()">
+      <input type="button" value="Save" onclick="cookies_var_save()">
+      <input type="button" value="Load" onclick="cookies_var_load()">
+      <input type="button" value="Query read" onclick="query_read()">
     </div>
 
     <!--  Header: Maximum and Minimum values of wave (peak to peak) -->
