--- a/rms_calculator.html
+++ b/rms_calculator.html
@@ -8,7 +8,7 @@
    <meta charset="UTF-8">
    <meta name="Keywords" content="RMS, average, median, value, calculator">
    <meta name="Description" content="JavaScript average and RMS value Calculator">
-   <meta name="Version" content="19/03/2018 - SHA:32F562">
+   <meta name="Version" content="19/03/2018 - SHA:984EF7">
    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
    <title>Average and RMS value Calculator</title>
 
@@ -127,71 +127,13 @@
    .scoment {
       display: inline-block;
       min-width: 20em;
-   } 
+   }
 </style>
 
 
 <!-- ********** SCRIPTS ********** -->
 <script>
- 
 
-
-   /*********************************************************************/
-   /* Include script: include/zeros.js                                  */
-   /*                                                                   */
-
-   
-   // Zero finding with secant method. https://en.wikipedia.org/wiki/Secant_method
-   function zero_secant(x, fn) {
-      var iter, x0, x1, x2, y0, y1;
-      x1 = x * 1.0;
-      y1 = fn(x1);
-      x2 = x1 * 1.001 + 1e-8;
-      for(iter=0; iter<40; iter++) {
-         x0 = x1;
-         y0 = y1;
-         x1 = x2
-         y1 = fn(x1);
-         if ((Math.abs(y1) < 1e-50) || Math.abs((x1-x0)/x1) < 1e-12)
-            break;
-         if (y0 == y1)
-            x2 = x1 * 1.001 + 1e-8;
-         else
-            x2 = x1 - y1*(x1-x0)/(y1-y0);
-      }
-      return x1;
-   }
-
-
-   // Zero finding between two points
-   function zero_bisect(x0, x1, fn) {
-      var iter, x2, y0, y1, y2;
-      x0 = x0 * 1.0;
-      x1 = x1 * 1.0;
-      y0 = fn(x0);
-      y1 = func_1(x1);
-      if (Math.sign(y0 * y1) != -1)
-         return '';
-      for(iter=0; iter<80; iter++) {
-         x2 = 0.5 * (x0 + x1);
-         y2 = func_1(x2);
-         if ((Math.abs(y2) < 1e-50) || Math.abs((x1-x0)/x1) < 1e-12)
-            break;
-         if (Math.sign(y2) == Math.sign(y1)) {
-            y1 = y2;
-            x1 = x2;
-         }
-         else {
-            y0 = y2;
-            x0 = x2;
-         }
-      }
-      return x2;
-   }
-
-   /*                                                                   */
-   /* End Include: include/zeros.js                                     */
-   /*********************************************************************/
 
    // Setup variables onload
    function setup() {
@@ -383,7 +325,7 @@
       value = encodeURIComponent(document.getElementById("V5_rms").value)
       if (value.length) query = query + "V5_rms=" + value + '&';
       if (query.length > 1) url = url + query
-      history.pushState({id: 'homepage'}, 'Average and RMS value Calculator', url);
+      history.pushState({id: ''}, 'Average and RMS value Calculator', url);
    }
 
    // Read query string from URL
@@ -400,6 +342,25 @@
       }
       return vars;
    }
+
+   // Copy url with query to clipboard
+   function query_copy() {
+      var textArea = document.createElement('textarea');
+      textArea.value = document.location.href;
+      document.body.appendChild(textArea);
+      textArea.focus();
+      textArea.select();
+      try {
+         document.execCommand('copy');
+      } catch (err) {
+         console.error('Oops, unable to copy url', err);
+      }
+      document.body.removeChild(textArea);
+   }
+
+   window.onpopstate = function(event) {
+      document.location.reload();
+   };
 
    // Evalue inputs with '.' or ',' as comma
    function idtonum(id) {
@@ -452,7 +413,7 @@
 </head>
 
 
-<body onload="cookies_setup()">
+<body onload="setup()">
 
 <!-- ********** BODY CONTENT ********** -->
 
@@ -870,9 +831,7 @@ RU5ErkJggg==
       Values
       <input type="button" value="Reset" onclick="var_reset()">
       <input type="button" value="Clear" onclick="var_clear()">
-      <input type="button" value="Save" onclick="cookies_var_save()">
-      <input type="button" value="Load" onclick="cookies_var_load()">
-      <input type="button" value="Query read" onclick="query_read()">
+      <input type="button" value="Copy URL" onclick="query_copy()">
    </div>
 
    <!--  Header: Maximum and Minimum values of wave (peak to peak) -->
