--- a/example.html
+++ b/example.html
@@ -8,7 +8,7 @@
    <meta charset="UTF-8">
    <meta name="Keywords" content="Picalc, yaml, help, online calculator">
    <meta name="Description" content="Picalc example calculator with all features of picalc showed">
-   <meta name="Version" content="19/03/2018 - SHA:0835AD">
+   <meta name="Version" content="19/03/2018 - SHA:9B5D70">
    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
    <title>Picalc example calculator</title>
 
@@ -166,27 +166,9 @@
    /* End Include: include/example.js                                   */
    /*********************************************************************/ 
 
-   // Setup variables onload
-   function setup() {
-      var config = query_read();
-      if (config.length > 0) {
-         var_write(config);
-         var_backup();
-      }
-      else var_reset();
-      calc();
-   }
-
-   // Compute calculations
+   // Calculate formulas and print values
    function calc() {
-
-      // Test variable changes
-      var_read_id();
-      if (var_test_change() == true) {
-         var_backup();
-         query_write();
-      }
-      else return;
+      var_backup();
 
       // Calculation: Section area of wire
       foo = 25 * 6;
@@ -209,17 +191,13 @@
    }
 
    // Reset variables to default values
-   function var_reset() {
+   function var_reset_id() {
       document.getElementById("D_wire").value = 10;
-
-      calc();
    }
 
    // Clear variables
-   function var_clear() {
+   function var_clear_id() {
       document.getElementById("D_wire").value = '';
-
-      calc();
    }
 
    // Test if there are variable changes
@@ -236,21 +214,21 @@
    }
 
    // Write values to variables
-   function var_write(values) {
+   function var_write_id(values) {
       for(var i=0; i<values.length; i++) {
          document.getElementById(values[i][0]).value = values[i][1];
       }
    }
 
    // Write query string into url
-   function query_write () {
+   function query_write() {
       var url = document.location.href.split('?')[0];
       var query = '?';
       var value;
       value = encodeURIComponent(document.getElementById("D_wire").value)
       if (value.length) query = query + "D_wire=" + value + '&';
       if (query.length > 1) url = url + query
-      history.pushState({id: ''}, 'Picalc example calculator', url);
+      history.pushState({id: 'picalc'}, 'Picalc example calculator', url);
    }
 
    // Read query string from URL
@@ -282,10 +260,6 @@
       }
       document.body.removeChild(textArea);
    }
-
-   window.onpopstate = function(event) {
-      document.location.reload();
-   };
 
    // Evalue inputs with '.' or ',' as comma
    function idtonum(id) {
@@ -323,16 +297,55 @@
       }
    }
 
+   // Setup variables on page load
+   function setup() {
+      var config = query_read();
+      if (config.length > 0) {
+         var_write_id(config);
+         var_read_id();
+      }
+      else {
+         var_reset_id();
+         var_read_id();
+         query_write();
+      }
+      calc();
+   }
+
+   // Manage browser history
+   window.onpopstate = function OnPopState(event) {
+      var config = query_read();
+      if (config.length == 0) {
+         var_reset_id();
+      }
+      else {
+         var_clear_id();
+         var_write_id(config);
+      }
+      var_read_id();
+      if (var_test_change() == true) {
+         calc();
+      }
+   };
+
    // Manage keys [Enter] and [tab]
-   function OnKeyPress(evt) {
+   document.onkeypress = function OnKeyPress(evt) {
       var evt = (evt) ? evt : ((event) ? event : null);
       var node = (evt.target) ? evt.target : ((evt.srcElement) ? evt.srcElement : null);
       if (node.type=="text") {
-         if (evt.keyCode == 9) { calc(); return; }
-         if (evt.keyCode == 13) { calc(); return false; }
+         if (evt.keyCode == 9) { recalc(); return; }
+         if (evt.keyCode == 13) { recalc(); return false; }
       }
    }
-   document.onkeypress = OnKeyPress;
+
+   // Recalc values after form change
+   function recalc() {
+      var_read_id();
+      if (var_test_change() == true) {
+         query_write();
+         calc();
+      }
+   }
 </script>
 
 </head>
