--- a/inductance_calc.html
+++ b/inductance_calc.html
@@ -8,7 +8,7 @@
    <meta charset="UTF-8">
    <meta name="Keywords" content="Inductance, magnetics, coil, calculator">
    <meta name="Description" content="Javascript Inductance calculator">
-   <meta name="Version" content="19/03/2018 - SHA:717166">
+   <meta name="Version" content="19/03/2018 - SHA:77476E">
    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
    <title>Inductance Calculator</title>
 
@@ -135,27 +135,9 @@
 <script>
 
 
-   // Setup variables onload
-   function setup() {
-      var config = query_read();
-      if (config.length > 0) {
-         var_write(config);
-         var_backup();
-      }
-      else var_reset();
-      calc();
-   }
-
-   // Compute calculations
+   // Calculate formulas and print values
    function calc() {
-
-      // Test variable changes
-      var_read_id();
-      if (var_test_change() == true) {
-         var_backup();
-         query_write();
-      }
-      else return;
+      var_backup();
 
       // Calculation: Relative lenght of air gap (g/√Ae)
       g_factor = g / Math.sqrt(Ae);
@@ -226,7 +208,7 @@
    }
 
    // Reset variables to default values
-   function var_reset() {
+   function var_reset_id() {
       document.getElementById("Ae").value = 683;
       document.getElementById("B_max").value = 300;
       document.getElementById("AL").value = 8100;
@@ -234,12 +216,10 @@
       document.getElementById("AL_2").value = idtonum("AL");
       document.getElementById("N").value = 10;
       document.getElementById("f").value = 20;
-
-      calc();
    }
 
    // Clear variables
-   function var_clear() {
+   function var_clear_id() {
       document.getElementById("Ae").value = '';
       document.getElementById("B_max").value = '';
       document.getElementById("AL").value = '';
@@ -247,8 +227,6 @@
       document.getElementById("AL_2").value = '';
       document.getElementById("N").value = '';
       document.getElementById("f").value = '';
-
-      calc();
    }
 
    // Test if there are variable changes
@@ -277,14 +255,14 @@
    }
 
    // Write values to variables
-   function var_write(values) {
+   function var_write_id(values) {
       for(var i=0; i<values.length; i++) {
          document.getElementById(values[i][0]).value = values[i][1];
       }
    }
 
    // Write query string into url
-   function query_write () {
+   function query_write() {
       var url = document.location.href.split('?')[0];
       var query = '?';
       var value;
@@ -303,7 +281,7 @@
       value = encodeURIComponent(document.getElementById("f").value)
       if (value.length) query = query + "f=" + value + '&';
       if (query.length > 1) url = url + query
-      history.pushState({id: ''}, 'Inductance Calculator', url);
+      history.pushState({id: 'picalc'}, 'Inductance Calculator', url);
    }
 
    // Read query string from URL
@@ -335,10 +313,6 @@
       }
       document.body.removeChild(textArea);
    }
-
-   window.onpopstate = function(event) {
-      document.location.reload();
-   };
 
    // Evalue inputs with '.' or ',' as comma
    function idtonum(id) {
@@ -376,16 +350,55 @@
       }
    }
 
+   // Setup variables on page load
+   function setup() {
+      var config = query_read();
+      if (config.length > 0) {
+         var_write_id(config);
+         var_read_id();
+      }
+      else {
+         var_reset_id();
+         var_read_id();
+         query_write();
+      }
+      calc();
+   }
+
+   // Manage browser history
+   window.onpopstate = function OnPopState(event) {
+      var config = query_read();
+      if (config.length == 0) {
+         var_reset_id();
+      }
+      else {
+         var_clear_id();
+         var_write_id(config);
+      }
+      var_read_id();
+      if (var_test_change() == true) {
+         calc();
+      }
+   };
+
    // Manage keys [Enter] and [tab]
-   function OnKeyPress(evt) {
+   document.onkeypress = function OnKeyPress(evt) {
       var evt = (evt) ? evt : ((event) ? event : null);
       var node = (evt.target) ? evt.target : ((evt.srcElement) ? evt.srcElement : null);
       if (node.type=="text") {
-         if (evt.keyCode == 9) { calc(); return; }
-         if (evt.keyCode == 13) { calc(); return false; }
+         if (evt.keyCode == 9) { recalc(); return; }
+         if (evt.keyCode == 13) { recalc(); return false; }
       }
    }
-   document.onkeypress = OnKeyPress;
+
+   // Recalc values after form change
+   function recalc() {
+      var_read_id();
+      if (var_test_change() == true) {
+         query_write();
+         calc();
+      }
+   }
 </script>
 
 </head>
