--- a/example.html
+++ b/example.html
@@ -8,7 +8,7 @@
    <meta charset="UTF-8">
    <meta name="Keywords" content="Picalc, yaml, help, online calculator">
    <meta name="Description" content="Picalc example calculator with all features of picalc showed">
-   <meta name="Version" content="22/03/2018 - SHA:3ADEBE">
+   <meta name="Version" content="26/03/2018 - SHA:FA0215">
    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
    <title>Picalc example calculator</title>
 
@@ -89,7 +89,12 @@
     input[type=text]:disabled {
       color: inherit;
    }
-
+   
+   .ssel {
+      display: inline-block;
+      width: 9.0em;
+   }
+   
    .sval {
       display: inline-block;
       width: 5em;
@@ -186,31 +191,31 @@
 
    // Read all variables
    function var_read_id() {
-      D_wire = idtonum("D_wire") * 1e-03; // Variable: Diameter of wire
+      d_wire = idtonum("d_wire") * 1e-03; // Variable: Diameter of wire
       Pi = ( 3.14159 ) * 1e0; // Constant: Pi. Ratio of a circle's circumference to its diameter.
    }
 
    // Reset variables to default values in html
    function var_reset_id() {
-      document.getElementById("D_wire").value = 10;
+      document.getElementById("d_wire").value = 10;
    }
 
    // Clear variables in html
    function var_clear_id() {
-      document.getElementById("D_wire").value = '';
+      document.getElementById("d_wire").value = '';
    }
 
    // Test if there are variable changes
    var var_values = {};
 
    function var_test_change() {
-      if (var_values["D_wire"] != D_wire) return true;
+      if (var_values["d_wire"] != d_wire) return true;
       return false;
    }
 
    // Copy values of variables
    function var_backup() {
-      var_values["D_wire"] = D_wire;
+      var_values["d_wire"] = d_wire;
    }
 
    // Write values to variables
@@ -218,6 +223,26 @@
       for(var i=0; i<values.length; i++) {
          document.getElementById(values[i][0]).value = values[i][1];
       }
+   }
+
+   // Select: Wire type
+   function select_wire_diameter() {
+      var database = {
+         "AWG24": {"d_wire": 0, "i_max": 4.0, "5106e-3": None, },
+         "AWG26": {"4049e-3": None, "d_wire": 0, "i_max": 3.2, },
+         "AWG28": {"3211e-3": None, "d_wire": 0, "i_max": 2.6, },
+      }         
+      selected_id = document.getElementById("select_wire_diameter_id").value;
+      data_selected = database[selected_id];
+      if (!data_selected || data_selected.length == 0) 
+         return;
+      var elem;
+      for(var key in data_selected) {
+         elem = document.getElementById(key);
+         if (elem) elem.value = data_selected[key];
+      }
+      var_read_id();
+      calc();
    }
 
    // Reset variables to default values in html and JavaScript
@@ -246,8 +271,8 @@
       var url = document.location.href.split('?')[0];
       var query = '?';
       var value;
-      value = encodeURIComponent(document.getElementById("D_wire").value)
-      if (value.length) query = query + "D_wire=" + value + '&';
+      value = encodeURIComponent(document.getElementById("d_wire").value)
+      if (value.length) query = query + "d_wire=" + value + '&';
       if (query.length > 1) url = url + query
       history.pushState({id: 'picalc'}, 'Picalc example calculator', url);
    }
@@ -379,6 +404,9 @@
    <div class="content"> <!-- Start content -->
 
    <h1>Picalc example calculator</h1>
+
+   <!--  Header: Example calculation -->
+   <h2 id="Example_calculation">Example calculation</h2>
 
    <!--  Image: example.png -->
    <img alt="example of embed image" width="320px"
@@ -538,6 +566,17 @@ AAAAACABAQAAAEACAgAAAAAkIAAAAABy6v8Dq6+5goP0/ZQAAAAASUVORK5CYII=
 
 
 
+   <!--  Row: Wire type  -->
+   <div class="row">
+      <div class="sname">Wire type</div>
+      <select class="ssel" onchange="select_wire_diameter()" id="select_wire_diameter_id">
+	   <option value="AWG24"selected="selected">AWG24</option>
+	   <option value="AWG26">AWG26</option>
+	   <option value="AWG28">AWG28</option>
+      </select>
+      <div class="scoment">Diameter of wire selection</div>
+   </div>
+
    <!--  Buttons: Values -->
    <div class="row">
       Values
@@ -546,13 +585,10 @@ AAAAACABAQAAAEACAgAAAAAkIAAAAABy6v8Dq6+5goP0/ZQAAAAASUVORK5CYII=
       <input type="button" value="Copy URL" onclick="button_url_copy()">
    </div>
 
-   <!--  Header: Example calculation -->
-   <h2 id="Example_calculation">Example calculation</h2>
-
    <!--  Row: D_wire  -->
    <div class="row">
       <div class="sname">D_wire</div>
-      <div class="sval"> <form> <input type="text" id="D_wire"> </form> </div>
+      <div class="sval"> <form> <input type="text" id="d_wire"> </form> </div>
       <div class="sunit">mm</div>
       <div class="scoment">Diameter of wire</div>
    </div>
