--- a/rms_calculator.html
+++ b/rms_calculator.html
@@ -8,7 +8,7 @@
    <meta charset="UTF-8">
    <meta name="Keywords" content="RMS, average, median, value, calculator">
    <meta name="Description" content="JavaScript average and RMS value Calculator">
-   <meta name="Version" content="22/03/2018 - SHA:1E214C">
+   <meta name="Version" content="26/03/2018 - SHA:F77256">
    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
    <title>Average and RMS value Calculator</title>
 
@@ -89,7 +89,12 @@
     input[type=text]:disabled {
       color: inherit;
    }
-
+   
+   .ssel {
+      display: inline-block;
+      width: 7.0em;
+   }
+   
    .sval {
       display: inline-block;
       width: 5em;
